assets/css/site/header.css
.gh-head-logo {
    position: relative;
    font-weight: 800;
    position: relative;
    width: 120px;
    height: 64px;
    display: flex;
    place-content: center;
    place-items: center;
    mix-blend-mode: multiply;
}

.dark-mode .gh-head-logo {
    mix-blend-mode: lighten;
    filter: invert(1);
}

.gh-head-logo:hover {
    cursor: url("/assets/media/refresh.svg") 0 0, pointer;
    cursor: -webkit-image-set(url("/assets/media/refresh.png") 1x, url("/assets/media/refresh@2x.png") 2x) 0 0, pointer;
}

.gh-head-logo img {
    max-height: none;
}

#video {
    align-self: flex-start;
    justify-self: flex-start;
}

.gh-head-menu {
    font-weight: 600;
}

.gh-head-menu a {
    color: var(--primary-text-color);
}

.gh-head-menu .nav-current a {
    color: var(--color-darker-gray);
}

video {
    position: absolute;
    height: 1px;
    width: 1px;
    overflow: hidden;
}

.headline {
    display: flex;
    place-content: center;
    font-family: var(--font-headline);
}

.headline .post-title {
    font-size: 3.6rem;
    margin-bottom: 0;
    text-align: center;
}

